Spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ dd {
 
 #about {
     background-color: #e0e0e0;
-    line-height: 150%;
+    line-height: 1.5;
 }
 
 /* footer rules below */
